--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Blade Rush - Knife Throwing Game | Aditya Games</title>
+    
+     <script src="https://sdk.minepi.com/pi-sdk.js"></script>
 
     <!-- Favicon and App Icons -->
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-96x96.png" sizes="96x96" />
